--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,13 @@
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
+
+        <style>
+            body {
+             background: url("https://placehold.co/100x100/FFFFFF/EFEFEF/png?text=51114");
+            }
+        </style>
+
     </head>
     <body>
         {% block body %}{% endblock %}
