--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,94 +1,77 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>{% block title %}Welcome!{% endblock %}</title>
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"
-    />
+	<head>
+		<meta charset="UTF-8"/>
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"/>
 
-    {% block stylesheets %}
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    {% endblock %} {% block javascripts %} {% block importmap %}{{
+		{% block stylesheets %}
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+		{% endblock %}
+		{% block javascripts %}
+			{% block importmap %}
+				{{
       importmap("app")
-    }}{% endblock %}
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    {% endblock %}
+    }}
+			{% endblock %}
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+		{% endblock %}
 
-    <style>
-      body {
-        background: url("https://placehold.co/100x100/FFFFFF/EFEFEF/png?text=51114");
+		<style>
+			body {
+				background: url("https://placehold.co/100x100/FFFFFF/EFEFEF/png?text=51114");
 
-        a.nav-link {
-          cursor: pointer;
-        }
-      }
+				a.nav-link {
+					cursor: pointer;
+				}
+			}
 
-      #nav {
-        margin-bottom: 20px; /* Dodanie marginesu pod nawigacją */
-      }
+			#nav {
+				margin-bottom: 20px; /* Dodanie marginesu pod nawigacją */
+			}
 
-      .nav-link {
-        transition: color 0.3s ease; /* Dodanie efektu przejścia */
-      }
+			.nav-link {
+				transition: color 0.3s ease; /* Dodanie efektu przejścia */
+			}
 
-      .nav-link:hover {
-        color: #007bff; /* Zmiana koloru linków po najechaniu */
-      }
+			.nav-link:hover {
+				color: #007bff; /* Zmiana koloru linków po najechaniu */
+			}
 
-      #container {
-        background: rgba(255, 255, 255, 0.8); /* Lekki cień dla kontenera */
-        border-radius: 5px; /* Zaokrąglenie rogów */
-        padding: 20px; /* Dodanie paddingu */
-        box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3); /* Cień dla kontenera */
-      }
-    </style>
-  </head>
-  <body>
-    <nav
-      id="nav"
-      class="navbar navbar-expand-lg navbar-light bg-light shadow-sm"
-    >
-      <div class="container-fluid">
-        <span class="navbar-brand">W App</span>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Weather</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Measurements</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+			#container {
+				background: rgba(255, 255, 255, 0.8); /* Lekki cień dla kontenera */
+				border-radius: 5px; /* Zaokrąglenie rogów */
+				padding: 20px; /* Dodanie paddingu */
+				box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3); /* Cień dla kontenera */
+			}
+		</style>
+	</head>
+	<body>
+		<nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+			<div class="container-fluid">
+				<span class="navbar-brand">W App</span>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_location_index') }}">Cities</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('app_measurement_entry_index') }}">Measurements</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
-    <main>
-      <div id="container" class="container pt-4">
-        {% block body %} {% endblock %}
-      </div>
-    </main>
-  </body>
-</html>
+		<main>
+			<div id="container" class="container pt-4"> {% block body %}{% endblock %}
+				</div>
+			</main>
+		</body>
+	</html>
