--- a/templates/location/index.html.twig
+++ b/templates/location/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Location index</h1>
 
-    <table class="table">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
@@ -25,8 +25,8 @@
                 <td>{{ location.latitude }}</td>
                 <td>{{ location.longitude }}</td>
                 <td>
-                    <a href="{{ path('app_location_show', {'id': location.id}) }}">show</a>
-                    <a href="{{ path('app_location_edit', {'id': location.id}) }}">edit</a>
+                    <a href="{{ path('app_location_show', {'id': location.id}) }}" class="btn btn-info">show</a>
+                    <a href="{{ path('app_location_edit', {'id': location.id}) }}" class="btn btn-secondary">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -37,5 +37,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_location_new') }}">Create new</a>
+    <a href="{{ path('app_location_new') }}" class="btn btn-primary">Create new</a>
 {% endblock %}
