--- a/templates/location/show.html.twig
+++ b/templates/location/show.html.twig
@@ -1,38 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Location{% endblock %}
+{% block title %}Location
+{% endblock %}
 
 {% block body %}
-    <h1>Location</h1>
+	<h1>Location</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ location.id }}</td>
-            </tr>
-            <tr>
-                <th>City</th>
-                <td>{{ location.city }}</td>
-            </tr>
-            <tr>
-                <th>Country</th>
-                <td>{{ location.country }}</td>
-            </tr>
-            <tr>
-                <th>Latitude</th>
-                <td>{{ location.latitude }}</td>
-            </tr>
-            <tr>
-                <th>Longitude</th>
-                <td>{{ location.longitude }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ location.id }}</td>
+			</tr>
+			<tr>
+				<th>City</th>
+				<td>{{ location.city }}</td>
+			</tr>
+			<tr>
+				<th>Country</th>
+				<td>{{ location.country }}</td>
+			</tr>
+			<tr>
+				<th>Latitude</th>
+				<td>{{ location.latitude }}</td>
+			</tr>
+			<tr>
+				<th>Longitude</th>
+				<td>{{ location.longitude }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_location_index') }}">back to list</a>
+	<div>
+		<a href="{{ path('app_location_index') }}" class="btn btn-primary">back to list</a>
+	</div>
 
-    <a href="{{ path('app_location_edit', {'id': location.id}) }}">edit</a>
+	<div>
+		<a href="{{ path('app_location_edit', {'id': location.id}) }}" class="btn btn-secondary my-1">edit</a>
+	</div>
 
-    {{ include('location/_delete_form.html.twig') }}
+	{{ include('location/_delete_form.html.twig') }}
 {% endblock %}
