--- a/templates/measurement_entry/edit.html.twig
+++ b/templates/measurement_entry/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('measurement_entry/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_measurement_entry_index') }}">back to list</a>
+    <a href="{{ path('app_measurement_entry_index') }}" class="btn btn-secondary my-1">back to list</a>
 
     {{ include('measurement_entry/_delete_form.html.twig') }}
 {% endblock %}
