--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Weather App"/>
 		<title>
 			{% block title %}Welcome!
 			{% endblock %}
