--- a/templates/location/edit.html.twig
+++ b/templates/location/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Edit Location</h1>
 
-    {{ include('location/_form.html.twig', {'button_label': 'Update', 'button_color': 'success'}) }}
+    {{ include('location/_form.html.twig', {'button_label': 'Update', 'button_color': 'primary'}) }}
 
     <a href="{{ path('app_location_index') }}" class="btn btn-secondary my-1">back to list</a>
 
