--- a/templates/location/index.html.twig
+++ b/templates/location/index.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     <h1>Location index</h1>
 
+    <div class="table-responsive-sm">
     <table class="table table-striped">
         <thead>
             <tr>
@@ -25,7 +26,7 @@
                 <td>{{ location.latitude }}</td>
                 <td>{{ location.longitude }}</td>
                 <td>
-                    <a href="{{ path('app_location_show', {'id': location.id}) }}" class="btn btn-info">show</a>
+                    <a href="{{ path('app_location_show', {'id': location.id}) }}" class="btn btn-info p-0.5">show</a>
                     <a href="{{ path('app_location_edit', {'id': location.id}) }}" class="btn btn-secondary">edit</a>
                 </td>
             </tr>
@@ -36,6 +37,7 @@
         {% endfor %}
         </tbody>
     </table>
+    </div>
 
     <a href="{{ path('app_location_new') }}" class="btn btn-primary">Create new</a>
 {% endblock %}
