--- a/templates/location/index.html.twig
+++ b/templates/location/index.html.twig
@@ -1,43 +1,52 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Location index{% endblock %}
+{% block title %}Location index
+{% endblock %}
 
 {% block body %}
-    <h1>Location index</h1>
+	<h1>Location index</h1>
 
-    <div class="table-responsive-sm">
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>City</th>
-                <th>Country</th>
-                <th>Latitude</th>
-                <th>Longitude</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for location in locations %}
-            <tr>
-                <td>{{ location.id }}</td>
-                <td>{{ location.city }}</td>
-                <td>{{ location.country }}</td>
-                <td>{{ location.latitude }}</td>
-                <td>{{ location.longitude }}</td>
-                <td>
-                    <a href="{{ path('app_location_show', {'id': location.id}) }}" class="btn btn-info p-0.5">show</a>
-                    <a href="{{ path('app_location_edit', {'id': location.id}) }}" class="btn btn-secondary">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    </div>
+	<div class="table-responsive-sm">
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>City</th>
+					<th>Country</th>
+					<th>Latitude</th>
+					<th>Longitude</th>
+					<th>actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for location in locations %}
+					<tr>
+						<td>{{ location.id }}</td>
+						<td>{{ location.city }}</td>
+						<td>{{ location.country }}</td>
+						<td>{{ location.latitude }}</td>
+						<td>{{ location.longitude }}</td>
+						<td>
+							{% if is_granted('ROLE_LOCATION_SHOW') %}
+								<a href="{{ path('app_location_show', {'id': location.id}) }}" class="btn btn-info p-0.5">show</a>
+							{% endif %}
+                            
+							{% if is_granted('ROLE_LOCATION_EDIT') %}
+								<a href="{{ path('app_location_edit', {'id': location.id}) }}" class="btn btn-secondary">edit</a>
+							{% endif %}
+						</td>
+					</tr>
+				{% else %}
+					<tr>
+						<td colspan="6">no records found</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+	</div>
 
-    <a href="{{ path('app_location_new') }}" class="btn btn-primary">Create new</a>
+	{% if is_granted('ROLE_LOCATION_NEW') %}
+		<a href="{{ path('app_location_new') }}" class="btn btn-primary">Create new</a>
+	{% endif %}
+
 {% endblock %}
