--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,20 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LoginController!{% endblock %}
+{% block title %}Login
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<div class="container mt-1 mb-2">
+		<div class="row justify-content-center">
+			<div class="col-md-6">
+				<h3 class="card-title text-center mb-4">Login</h3>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+				{% if error %}
+					<div class="alert alert-danger" role="alert">
+						{{ error.messageKey|trans(error.messageData, "security") }}
+					</div>
+				{% endif %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/studia/AI2-lab/pogodynka/src/Controller/LoginController.php</code></li>
-        <li>Your template at <code>C:/studia/AI2-lab/pogodynka/templates/login/index.html.twig</code></li>
-    </ul>
-</div>
+				<form action="{{ path('app_login') }}" method="post">
+					<div class="form-group mb-3">
+						<label for="username">Username:</label>
+						<input type="text" class="form-control" name="_username" id="username" value="{{ last_username }}" required autofocus/>
+					</div>
+
+					<div class="form-group mb-3">
+						<label for="password">Password:</label>
+						<input type="password" class="form-control" name="_password" id="password" required/>
+					</div>
+
+					<div class="d-grid">
+						<button type="submit" class="btn btn-primary btn-block">Login</button>
+					</div>
+				</form>
+
+			</div>
+		</div>
+	</div>
 {% endblock %}
