--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,6 +68,11 @@
 						</li>
 					</ul>
 				</div>
+				{% if is_granted("ROLE_USER") %}
+					<a href="{{ path('app_logout') }}" class="btn btn-outline-danger">Logout</a>
+				{% else %}
+					<a href="{{ path('app_login') }}" class="btn btn-outline-primary">Login</a>
+				{% endif %}
 			</div>
 		</nav>
 
